solving problem with duplicate c3p0 management beans after instance start and correctly destroying the c3p0 datasources after instance shutdown